--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <figure class="about__picture">
 
-    <img src="imagenes/smartmockups_kmbr33iy.png" width="200" height="150" alt="" class="about__img">
+   
 </figure>
 </section>
 
@@ -71,7 +71,7 @@
 
 <div class="card__item">
     <figure class="card__img">
-<img src="imagenes/Military_Flatline.svg" alt="" class="card__picture">
+<img src="imagenes/bxs-game.svg" alt="" class="card__picture">
     </figure>
     <h3 class="card__title">Videojuegos</h3>
     <p class="card__paragraph">La mayor parte de mi tiempo me la paso jugando juegos en línea con mis amigos de la vocacional
@@ -81,7 +81,7 @@
 
 <div class="card__item">
     <figure class="card__img">
-<img src="imagenes/Dog walking_Flatline.svg" alt="" class="card__picture">
+<img src="imagenes/bx-walk.svg" alt="" class="card__picture">
     </figure>
     <h3 class="card__title">Mi mascota</h3>
     <p class="card__paragraph">Me encanta pasar tiempo con mi mascota,diario salimos a caminar minimo 30 minutos,
@@ -93,7 +93,7 @@
 
 <div class="card__item">
     <figure class="card__img">
-<img src="imagenes/Reading a book_Outline.svg" alt="" class="card__picture">
+<img src="imagenes/bx-library.svg" alt="" class="card__picture">
     </figure>
     <h3 class="card__title">Estudiar</h3>
     <p class="card__paragraph">Basicamente diario aprendo algo nuevo y esto quiere decir que me lleva a
@@ -103,7 +103,7 @@
 
 <div class="card__item">
     <figure class="card__img">
-<img src="imagenes/Resting _Monochromatic.svg" alt="" class="card__picture">
+<img src="imagenes/bx-camera-movie.svg" alt="" class="card__picture">
     </figure>
     <h3 class="card__title">Peliculas y series </h3>
     <p class="card__paragraph">Me gusta ver peliculas y series cada que tengo tiempo , normalmente solo 
