--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú trabajos</title>
+    <title>MENÚ</title>
     <link rel="stylesheet" href="css/menuestilos.css">
 </head>
 <body>
