--- a/AES.html
+++ b/AES.html
@@ -21,12 +21,19 @@
         <link rel="stylesheet" href="css/estilos.css">
         <title>Cifrado AES</title>
     </head>
+   
 <body>
+    <body background="css/fondo.png"></body>
+        
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js" ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" ></script>
     <script src="js/FileSaver.js" ></script>
-<body background="css/fondo.png"> 
-   
+
+    <div class="entrada">
+        <h5 class="hy">
+            
+          </h5>
+    </div>
     <div align="center">
         <div class="menu">
         <div class="sub-menu">
